--- a/app/src/main/res/layout/test.xml
+++ b/app/src/main/res/layout/test.xml
@@ -15,6 +15,7 @@
         android:id="@+id/register_back_button"
         android:src="@drawable/back_btn"
         android:background="@null"
+        android:onClick="RegisterBaseOnClick"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
@@ -25,14 +26,15 @@
         android:imeOptions="actionNext"
         android:singleLine="true"
         android:paddingRight="10dp"
-        android:drawableRight="@drawable/ok_icon"
+        android:drawableRight="@null"
         android:background="@drawable/login_input_bg"
         android:maxLength="20"
         android:maxLines="1"
         android:paddingLeft="20dp"
-        android:textColor="@color/black"
+        android:textColor="@color/login_text_hint"
         android:textColorHint="@color/login_text_hint"
         android:textSize="22dp"
+        android:onClick="RegisterBaseOnClick"
         android:layout_centerHorizontal="true"
         android:id="@+id/register_account_input"
         android:hint="@string/account_input"
@@ -45,12 +47,13 @@
         android:imeOptions="actionNext"
         android:singleLine="true"
         android:paddingRight="10dp"
-        android:drawableRight="@drawable/ok_icon"
+        android:drawableRight="@null"
+        android:onClick="RegisterBaseOnClick"
         android:background="@drawable/login_input_bg"
         android:maxLength="20"
         android:maxLines="1"
         android:paddingLeft="20dp"
-        android:textColor="@color/black"
+        android:textColor="@color/login_text_hint"
         android:textColorHint="@color/login_text_hint"
         android:textSize="22dp"
         android:layout_centerHorizontal="true"
@@ -66,12 +69,13 @@
         android:imeOptions="actionNext"
         android:singleLine="true"
         android:paddingRight="10dp"
-        android:drawableRight="@drawable/ok_icon"
+        android:drawableRight="@null"
+        android:onClick="RegisterBaseOnClick"
         android:background="@drawable/login_input_bg"
         android:maxLength="20"
         android:maxLines="1"
         android:paddingLeft="20dp"
-        android:textColor="@color/black"
+        android:textColor="@color/login_text_hint"
         android:textColorHint="@color/login_text_hint"
         android:textSize="22dp"
         android:layout_centerHorizontal="true"
@@ -87,12 +91,13 @@
         android:imeOptions="actionNext"
         android:singleLine="true"
         android:paddingRight="10dp"
-        android:drawableRight="@drawable/ok_icon"
+        android:drawableRight="@null"
+        android:onClick="RegisterBaseOnClick"
         android:background="@drawable/login_input_bg"
         android:maxLength="20"
         android:maxLines="1"
         android:paddingLeft="20dp"
-        android:textColor="@color/black"
+        android:textColor="@color/login_text_hint"
         android:textColorHint="@color/login_text_hint"
         android:textSize="22dp"
         android:layout_centerHorizontal="true"
@@ -123,6 +128,7 @@
             android:layout_alignParentLeft="true"/>
 
         <RadioGroup
+            android:id="@+id/userSex"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
@@ -168,12 +174,13 @@
         android:imeOptions="actionNext"
         android:singleLine="true"
         android:paddingRight="10dp"
-        android:drawableRight="@drawable/ok_icon"
+        android:drawableRight="@null"
+        android:onClick="RegisterBaseOnClick"
         android:background="@drawable/login_input_bg"
         android:maxLength="20"
         android:maxLines="1"
         android:paddingLeft="20dp"
-        android:textColor="@color/black"
+        android:textColor="@color/login_text_hint"
         android:textColorHint="@color/login_text_hint"
         android:textSize="22dp"
         android:layout_centerHorizontal="true"
@@ -185,6 +192,21 @@
         android:layout_below="@+id/register_usersex_input" />
 
     <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/register_birth_input"
+        android:onClick="RegisterBaseOnClick"
+        android:background="@drawable/login_input_bg"
+        android:layout_centerHorizontal="true"
+        android:text="@string/birth_input"
+        android:paddingLeft="20dp"
+        android:textSize="22dp"
+        android:textColor="@color/login_text_hint"
+        android:gravity="left|center"
+        android:layout_marginTop="10dp"
+        android:layout_below="@+id/register_email_input"  />
+
+    <Button
         android:id="@+id/next_step_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -192,8 +214,9 @@
         android:text="@string/next_step"
         android:textColor="@color/login_btn_text"
         android:textSize="26dp"
+        android:onClick="RegisterBaseOnClick"
         android:layout_marginTop="30dp"
         android:layout_centerHorizontal="true"
-        android:layout_below="@+id/register_email_input" />
+        android:layout_below="@+id/register_birth_input" />
 
 </RelativeLayout>
