--- a/app/src/main/res/layout/activity_register_photo.xml
+++ b/app/src/main/res/layout/activity_register_photo.xml
@@ -1,156 +1,173 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="@color/background_normal" >
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/main_bg">
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="20dp"
+        android:id="@+id/register_back_button"
+        android:src="@drawable/back_btn"
+        android:background="@null"
+        android:onClick="RegisterBaseOnClick"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <RelativeLayout
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/title_bar"
-        android:orientation="vertical" >
+        android:layout_height="fill_parent"
+        android:layout_above="@+id/linearLayout3"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/register_back_button"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true">
 
-        <TextView
-            android:id="@+id/register_title"
+        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="@string/upload_picture"
-            android:textColor="@color/white"
-            android:textSize="20dp" />
+            android:id="@+id/imageView7"
+            android:src="@drawable/logo"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true" />
 
     </RelativeLayout>
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:fadingEdge="none"
-        android:fillViewport="true"
-        android:scrollbars="none" >
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_marginBottom="30dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:orientation="horizontal"
+        android:layout_above="@+id/textView3"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/linearLayout3">
+
+        <ImageView
+            android:id="@+id/reg_photo_iv_userphoto"
+            android:layout_width="120dip"
+            android:layout_height="120dip"
+            android:background="@drawable/register_portrait"
+            android:src="@drawable/ic_userpro_bind_press" />
 
         <LinearLayout
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="28dip"
-            android:weightSum="1">
+            android:layout_height="fill_parent"
+            android:layout_marginLeft="30dp"
+            android:layout_weight="1"
+            android:orientation="vertical" >
 
             <LinearLayout
+                android:id="@+id/reg_photo_layout_selectphoto"
                 android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="fill_parent"
+                android:layout_marginBottom="3dip"
+                android:layout_weight="1"
+                android:background="@drawable/btn_default"
                 android:gravity="center"
-                android:orientation="horizontal"
-                android:layout_marginTop="80dp"
-                android:padding="1dip" >
+                android:orientation="horizontal" >
 
                 <ImageView
-                    android:id="@+id/reg_photo_iv_userphoto"
-                    android:layout_width="120dip"
-                    android:layout_height="120dip"
-                    android:layout_marginRight="12dip"
-                    android:background="@drawable/bg_reg_userhead"
-                    android:padding="6dip"
-                    android:src="@drawable/ic_userpro_bind_press" />
-
-                <LinearLayout
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent"
-                    android:layout_marginLeft="1dip"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:orientation="vertical" >
+                    android:src="@drawable/ic_reg_album" />
 
-                    <LinearLayout
-                        android:id="@+id/reg_photo_layout_selectphoto"
-                        android:layout_width="fill_parent"
-                        android:layout_height="fill_parent"
-                        android:layout_marginBottom="3dip"
-                        android:layout_weight="1"
-                            android:background="@drawable/btn_default"
-                        android:gravity="center"
-                        android:orientation="horizontal" >
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:src="@drawable/ic_reg_album" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="0.5dip"
-                            android:layout_weight="1.0"
-                            android:text="相册选取"
-                            android:textColor="@color/font_value" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:id="@+id/reg_photo_layout_takepicture"
-                        android:layout_width="fill_parent"
-                        android:layout_height="fill_parent"
-                        android:layout_marginTop="3dip"
-                        android:layout_weight="1"
-                        android:background="@drawable/btn_default"
-                        android:gravity="center"
-                        android:orientation="horizontal" >
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1.0"
-                            android:src="@drawable/ic_reg_camera" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="0.5dip"
-                            android:layout_weight="1"
-                            android:text="现在拍摄"
-                            android:textColor="@color/font_value" />
-                    </LinearLayout>
-                </LinearLayout>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="0.5dip"
+                    android:layout_weight="1.0"
+                    android:text="相册选取"
+                    android:textColor="@color/font_value" />
             </LinearLayout>
 
-            <TextView
+            <LinearLayout
+                android:id="@+id/reg_photo_layout_takepicture"
                 android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="8dip"
-                android:layout_marginRight="8dip"
-                android:layout_marginTop="12dip"
+                android:layout_height="fill_parent"
+                android:layout_marginTop="3dip"
+                android:layout_weight="1"
+                android:background="@drawable/btn_default"
                 android:gravity="center"
-                android:text="上传真实的头像，拉近真实的距离。"
-                android:textColor="@color/font_value"
-                android:textSize="14sp" />
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:orientation="horizontal" >
 
-                <Button
+                <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/register_title"
-                    android:id="@+id/register_btn"
-                    android:background="@drawable/title_bar"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true" />
+                    android:layout_weight="1.0"
+                    android:src="@drawable/ic_reg_camera" />
 
-                <Button
+                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/previous_step"
-                    android:id="@+id/previous_step"
-                    android:background="@drawable/title_bar"
-                    android:layout_centerVertical="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true" />
-            </RelativeLayout>
+                    android:layout_marginBottom="0.5dip"
+                    android:layout_weight="1"
+                    android:text="现在拍摄"
+                    android:textColor="@color/font_value" />
+            </LinearLayout>
 
         </LinearLayout>
-    </ScrollView>
+
+    </LinearLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="上传真实头像，拉近你我距离"
+        android:id="@+id/textView3"
+        android:textColor="@color/login_text_hint"
+        android:textSize="22dp"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
+
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/textView3"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true">
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true">
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/register_title"
+                android:id="@+id/register_btn"
+                android:background="@drawable/login_button_bg"
+                android:layout_gravity="center_horizontal" />
+
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="fill_parent"
+                android:layout_height="30dp"
+                android:layout_gravity="center_horizontal" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/previous_step"
+                android:id="@+id/previous_step"
+                android:background="@drawable/login_button_bg"
+                android:layout_gravity="center_horizontal" />
+
+        </LinearLayout>
+
+    </RelativeLayout>
 
 </RelativeLayout>
