--- a/app/src/main/res/layout/activity_main_user.xml
+++ b/app/src/main/res/layout/activity_main_user.xml
@@ -82,7 +82,7 @@
                     android:id="@+id/nameText"
                     android:textSize="18dp"
                     android:paddingRight="10dp"
-                    android:textColor="@color/text_hint"
+                    android:textColor="@color/text_hint2"
                     android:layout_centerVertical="true"
                     android:layout_alignParentRight="true" />
 
@@ -119,7 +119,7 @@
                     android:id="@+id/accountText"
                     android:textSize="18dp"
                     android:paddingRight="10dp"
-                    android:textColor="@color/text_hint"
+                    android:textColor="@color/text_hint2"
                     android:layout_centerVertical="true"
                     android:layout_alignParentRight="true" />
 
@@ -156,7 +156,7 @@
                     android:id="@+id/sexText"
                     android:textSize="18dp"
                     android:paddingRight="10dp"
-                    android:textColor="@color/text_hint"
+                    android:textColor="@color/text_hint2"
                     android:layout_centerVertical="true"
                     android:layout_alignParentRight="true" />
 
