--- a/app/src/main/res/layout/activity_register_base.xml
+++ b/app/src/main/res/layout/activity_register_base.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@drawable/main_bg"
+    android:background="@drawable/background"
     android:focusable="true"
     android:focusableInTouchMode="true"
     android:orientation="vertical" >
@@ -31,14 +31,14 @@
         android:maxLength="20"
         android:maxLines="1"
         android:paddingLeft="20dp"
-        android:textColor="@color/login_text_hint"
-        android:textColorHint="@color/login_text_hint"
+        android:textColor="@color/text_hint"
+        android:textColorHint="@color/text_hint"
         android:textSize="22dp"
         android:onClick="RegisterBaseOnClick"
         android:layout_centerHorizontal="true"
         android:id="@+id/register_account_input"
         android:hint="@string/account_input"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="10dp"
         android:layout_below="@+id/register_back_button" />
 
     <EditText
@@ -53,14 +53,14 @@
         android:maxLength="20"
         android:maxLines="1"
         android:paddingLeft="20dp"
-        android:textColor="@color/login_text_hint"
-        android:textColorHint="@color/login_text_hint"
+        android:textColor="@color/text_hint"
+        android:textColorHint="@color/text_hint"
         android:textSize="22dp"
         android:layout_centerHorizontal="true"
         android:id="@+id/register_password_input"
         android:inputType="textPassword"
         android:hint="@string/password_input"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="6dp"
         android:layout_below="@+id/register_account_input" />
 
     <EditText
@@ -75,14 +75,14 @@
         android:maxLength="20"
         android:maxLines="1"
         android:paddingLeft="20dp"
-        android:textColor="@color/login_text_hint"
-        android:textColorHint="@color/login_text_hint"
+        android:textColor="@color/text_hint"
+        android:textColorHint="@color/text_hint"
         android:textSize="22dp"
         android:layout_centerHorizontal="true"
         android:id="@+id/register_re_paw_input"
         android:inputType="textPassword"
         android:hint="@string/re_password_input"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="6dp"
         android:layout_below="@+id/register_password_input" />
 
     <EditText
@@ -97,14 +97,14 @@
         android:maxLength="20"
         android:maxLines="1"
         android:paddingLeft="20dp"
-        android:textColor="@color/login_text_hint"
-        android:textColorHint="@color/login_text_hint"
+        android:textColor="@color/text_hint"
+        android:textColorHint="@color/text_hint"
         android:textSize="22dp"
         android:layout_centerHorizontal="true"
         android:id="@+id/register_username_input"
         android:inputType="textPersonName"
         android:hint="@string/username_input"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="6dp"
         android:layout_below="@+id/register_re_paw_input"/>
 
     <RelativeLayout
@@ -113,7 +113,7 @@
         android:background="@drawable/login_input_bg"
         android:layout_centerHorizontal="true"
         android:id="@+id/register_usersex_input"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="6dp"
         android:layout_below="@+id/register_username_input">
 
         <TextView
@@ -122,7 +122,7 @@
             android:layout_marginLeft="20dp"
             android:text="@string/sex_input"
             android:id="@+id/textView"
-            android:textColor="@color/login_text_hint"
+            android:textColor="@color/text_hint"
             android:textSize="22dp"
             android:layout_centerVertical="true"
             android:layout_alignParentLeft="true"/>
@@ -147,7 +147,7 @@
                 android:drawableRight="@drawable/checkbox_bg_h"
                 android:text="@string/man"
                 android:textSize="22dp"
-                android:textColor="@color/login_text_hint"
+                android:textColor="@color/text_hint"
                 android:layout_gravity="center_vertical" />
 
             <RadioButton
@@ -161,7 +161,7 @@
                 android:text="@string/woman"
                 android:textSize="22dp"
                 android:layout_marginLeft="10dp"
-                android:textColor="@color/login_text_hint"
+                android:textColor="@color/text_hint"
                 android:layout_gravity="center_vertical" />
 
         </RadioGroup>
@@ -180,16 +180,39 @@
         android:maxLength="20"
         android:maxLines="1"
         android:paddingLeft="20dp"
-        android:textColor="@color/login_text_hint"
-        android:textColorHint="@color/login_text_hint"
+        android:textColor="@color/text_hint"
+        android:textColorHint="@color/text_hint"
         android:textSize="22dp"
         android:layout_centerHorizontal="true"
         android:id="@+id/register_email_input"
         android:inputType="textEmailAddress"
         android:hint="@string/email_input"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="6dp"
         android:layout_below="@+id/register_usersex_input" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:imeOptions="actionNext"
+        android:singleLine="true"
+        android:paddingRight="10dp"
+        android:drawableRight="@null"
+        android:onClick="RegisterBaseOnClick"
+        android:background="@drawable/login_input_bg"
+        android:maxLength="20"
+        android:maxLines="1"
+        android:paddingLeft="20dp"
+        android:textColor="@color/text_hint"
+        android:textColorHint="@color/text_hint"
+        android:textSize="22dp"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/register_phone_input"
+        android:inputType="phone"
+        android:hint="@string/phone_input"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="6dp"
+        android:layout_below="@+id/register_email_input" />
 
     <Button
         android:layout_width="wrap_content"
@@ -201,10 +224,10 @@
         android:text="@string/birth_input"
         android:paddingLeft="20dp"
         android:textSize="22dp"
-        android:textColor="@color/login_text_hint"
+        android:textColor="@color/text_hint"
         android:gravity="left|center"
-        android:layout_marginTop="10dp"
-        android:layout_below="@+id/register_email_input"  />
+        android:layout_marginTop="6dp"
+        android:layout_below="@+id/register_phone_input"  />
 
     <Button
         android:id="@+id/next_step_btn"
@@ -212,10 +235,10 @@
         android:layout_height="wrap_content"
         android:background="@drawable/login_button_bg"
         android:text="@string/next_step"
-        android:textColor="@color/login_btn_text"
+        android:textColor="@color/btn_text"
         android:textSize="26dp"
         android:onClick="RegisterBaseOnClick"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="10dp"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/register_birth_input" />
 
