--- a/app/src/main/res/layout/activity_register_photo.xml
+++ b/app/src/main/res/layout/activity_register_photo.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/main_bg">
+    android:background="@drawable/background">
 
     <ImageButton
         android:layout_width="wrap_content"
@@ -85,7 +85,8 @@
                     android:layout_marginBottom="0.5dip"
                     android:layout_weight="1.0"
                     android:text="相册选取"
-                    android:textColor="@color/font_value" />
+                    android:textColor="@color/btn_text"
+                    android:textSize="16dp"/>
             </LinearLayout>
 
             <LinearLayout
@@ -110,7 +111,8 @@
                     android:layout_marginBottom="0.5dip"
                     android:layout_weight="1"
                     android:text="现在拍摄"
-                    android:textColor="@color/font_value" />
+                    android:textColor="@color/btn_text"
+                    android:textSize="16dp" />
             </LinearLayout>
 
         </LinearLayout>
@@ -122,7 +124,7 @@
         android:layout_height="wrap_content"
         android:text="上传真实头像，拉近你我距离"
         android:id="@+id/textView3"
-        android:textColor="@color/login_text_hint"
+        android:textColor="@color/text_hint"
         android:textSize="22dp"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
@@ -147,7 +149,9 @@
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/register_title"
+                android:text="@string/register_title"      
+                android:textColor="@color/btn_text"
+                android:textSize="24dp"
                 android:id="@+id/register_btn"
                 android:background="@drawable/login_button_bg"
                 android:layout_gravity="center_horizontal" />
@@ -162,6 +166,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/previous_step"
+                android:textColor="@color/btn_text"
+                android:textSize="24dp"
                 android:id="@+id/previous_step"
                 android:background="@drawable/login_button_bg"
                 android:layout_gravity="center_horizontal" />
