--- a/app/src/main/res/layout/activity_main_contacts.xml
+++ b/app/src/main/res/layout/activity_main_contacts.xml
@@ -10,26 +10,19 @@
         android:layout_marginRight="10dp"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/seabar_input"
-        android:drawableLeft="@drawable/search_bar_icon_normal"
+        android:background="@drawable/search_input"
         android:hint="请输入关键字"
+        android:paddingLeft="36dp"
+        android:textColor="@color/white"
+        android:textColorHint="@color/text_hint"
         android:singleLine="true"
         android:textSize="15.0dip" />
-
-    <com.android.decipherstranger.view.SideBar
-        android:id="@+id/sidrbar"
-        android:layout_width="30dp"
-        android:layout_height="fill_parent"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@+id/filter_edit" />
 
     <RelativeLayout
         android:id="@+id/new_friends"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="6dp"
         android:layout_marginLeft="10dp"
         android:layout_below="@+id/filter_edit"
         android:layout_toLeftOf="@+id/sidrbar"
@@ -49,7 +42,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:textSize="20dip"
-            android:textColor="#336598"
+            android:textColor="@color/text_hint"
             android:text="@string/new_friend"
             android:layout_centerVertical="true"
             android:layout_toRightOf="@+id/imageView"
@@ -72,8 +65,10 @@
         android:layout_height="wrap_content"
         android:id="@+id/contact_list"
         android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
+        android:listSelector="#00000000"
         android:layout_below="@+id/new_friends"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_toLeftOf="@+id/sidrbar"
         android:layout_toStartOf="@+id/sidrbar" />
 
@@ -83,8 +78,18 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:id="@+id/dialog"
         android:textSize="100dp"
+        android:textColor="@color/text_hint"
         android:gravity="center_horizontal|top"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
+
+    <view
+        android:id="@+id/sidrbar"
+        android:layout_width="20dp"
+        android:layout_height="fill_parent"
+        class="com.android.decipherstranger.view.SideBar"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/filter_edit" />
 
 </RelativeLayout>
