--- a/app/src/main/res/layout/contact_list_item.xml
+++ b/app/src/main/res/layout/contact_list_item.xml
@@ -2,16 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:background="@null">
 
     <TextView
         android:id="@+id/catalog"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:background="@color/grey"
-        android:textColor="#454545"
+        android:background="@drawable/login_register_press"
+        android:textColor="@color/white"
         android:layout_weight="1.0"
-        android:paddingLeft="5dip"
+        android:paddingLeft="15dip"
         android:paddingTop="5dip"
         android:paddingBottom="5dip"
         android:text="A"/>
@@ -19,6 +20,7 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/contact_item_bg"
         android:orientation="horizontal">
 
         <RelativeLayout
@@ -29,6 +31,7 @@
             <ImageView
                 android:layout_width="36dp"
                 android:layout_height="36dp"
+                android:layout_marginLeft="10dp"
                 android:id="@+id/contact_user_photo"
                 android:layout_centerVertical="true"
                 android:layout_alignParentLeft="true"/>
@@ -39,7 +42,7 @@
                     android:text="New Text"
                     android:textSize="20dp"
                     android:id="@+id/contact_user_name"
-                    android:textColor="#336598"
+                    android:textColor="@color/text_hint"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="10dp"
                     android:layout_toRightOf="@+id/contact_user_photo" />
