--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,12 +7,13 @@
 
     <color name="tab_blue">#ff04abff</color>
     <color name="text_blue">#ff1eb4ff</color>
-    <color name="text_hint2">#ff737373</color>
+    <color name="text_checked">#ff737373</color>
     <color name="page">#ffdcdcdc</color>
 
     <color name="text_hint">#ffa89d87</color>
     <color name="btn_text">#ffa79c88</color>
     <color name="tab">#ffeeeeee</color>
+    <color name="sidebar">#ffe0d8c3</color>
 
     <color name="red">#ffff0000</color>
     <color name="orange">#ffff570a</color>
